changing all the colors changing the button layout

--- a/home.html
+++ b/home.html
@@ -43,7 +43,8 @@
       </div>
       
       <!-- adjust sleep time  -->
-      <div class="flex-row">
+      <div class="row-flex" id="sleep-add">
+        <h3>Sleep</h3>
         <button class="adjust-sleep-time" id="adjust-sleep-time">
           <span class="material-symbols-outlined" id="adjust">nights_stay</span>
           <p class="adjust-text">Adjust Sleep Time</p>
@@ -114,7 +115,8 @@
       </div>
 
       <!-- Add nutrition  -->
-      <div class="flex-row">
+      <div class="row-flex" id="nutrition-add">
+        <h3>Nutrition</h3>
         <button class="add-nutrition" id="add-nutrition">
           <span class="material-symbols-outlined" id="nutrition">nutrition</span>
           <p class="add-nutrition-text">Add nutrition</p>
