fixing the 'sustainable food recommendation layout

--- a/home.html
+++ b/home.html
@@ -160,19 +160,21 @@
             />
 
             <!-- food recommendation  -->
-            <h3>Sustainable Food Recommendation</h3>
-            <div class="row-flex" id="recommend">
-              <div class="rec">
-                <img class="rec-img" src="assets/avocado.jpg" alt="" />
-                <p class="rec-txt">Avocado</p>
-              </div>
-              <div class="rec">
-                <img class="rec-img" src="assets/banana.jpeg" alt="" />
-                <p class="rec-txt">Banana</p>
-              </div>
-              <div class="rec">
-                <img class="rec-img" src="assets/pumpkin.webp" alt="" />
-                <p class="rec-txt">Pumpkin</p>
+            <div class="recommend">
+              <h3>Sustainable Food Recommendation</h3>
+              <div class="row-flex" id="recommend">
+                <div class="rec">
+                  <img class="rec-img" src="assets/avocado.jpg" alt="" />
+                  <p class="rec-txt">Avocado</p>
+                </div>
+                <div class="rec">
+                  <img class="rec-img" src="assets/banana.jpeg" alt="" />
+                  <p class="rec-txt">Banana</p>
+                </div>
+                <div class="rec">
+                  <img class="rec-img" src="assets/pumpkin.webp" alt="" />
+                  <p class="rec-txt">Pumpkin</p>
+                </div>
               </div>
             </div>
           </div>
