change sleeptime color

--- a/sleeptime.html
+++ b/sleeptime.html
@@ -37,12 +37,16 @@
 
             </div>
             <div class="button">
+                <div class="return">
+                    <a href="home.html">
+                        <button id="return" class="quicksand-bold"></button>
+                    </a>
+                </div>
                 <a href="home.html">
                     <button id="confirm" class="quicksand-bold">
                         Confirm
                      </button>
                 </a>
-                
             </div>
         </div>
 
