yang sleep schedule dah ngga ketolong cok (gw apus imagenya aja)

--- a/sleeptime.html
+++ b/sleeptime.html
@@ -14,7 +14,7 @@
     <div class="container">
        
         <div class="box"> 
-            <img id="sleep" src="/assets/sleep.png">
+            <img id="sleep" src="/assets/green.jpeg">
             <div class="adjustbox">
                 <h2 id="sleeptext">Adjust Baby Sleep Time</h2>
 
