--- a/settings/Settings.html
+++ b/settings/Settings.html
@@ -18,7 +18,7 @@
         </div>
         
         <div class="UserProfile">
-            <img class="pfp" src="/assets/pfp.png">
+            <img class="pfp" src="/assets/pfp2.jpg" id="profile-picture">
             <h1 class="Name">Bob</h1>
         </div>
         
