--- a/registration/register.html
+++ b/registration/register.html
@@ -21,6 +21,14 @@
                     <!--
                     <label for="email">Email Address</label>
                     -->
+                    <input type="text" name="username" placeholder="Username" class="quicksand-regular" id="username">
+                    <span id="username-error"></span>
+                </div>
+
+                <div class="form-section">
+                    <!--
+                    <label for="email">Email Address</label>
+                    -->
                     <input type="text" name="email" placeholder="Email Address" class="quicksand-regular" id="email">
                     <span id="email-error"></span>
                 </div>
