Move login's script into its own js file

--- a/registration/login.html
+++ b/registration/login.html
@@ -60,6 +60,6 @@
         </div>
     </div>
     
-    <script src="register-scripts.js"></script>
+    <script src="login-scripts.js"></script>
 </body>
 </html>
