salvaging what i can

--- a/settings/acc-settings.html
+++ b/settings/acc-settings.html
@@ -18,7 +18,7 @@
     
     <div class="UserProfile">
         <img class="pfp" src="/assets/pfp2.jpg" id="profile-picture">
-        <h1 class="Name">Bob</h1>
+        <h1 class="Name" id="display-name"></h1>
     </div>
 
     <div class="buttons">
@@ -50,5 +50,6 @@
       </div>
     </div>
     
+    <script defer src="/settings/settings.js"></script>
 </body>
 </html>
