--- a/settings/Settings.html
+++ b/settings/Settings.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="settingstyle.css">
     <link rel="stylesheet" href="/master.css">
-    <script defer src="/components/main-header.js"></script>
     <link rel="stylesheet" href="/components/main-header.css">
+    <script defer src="/components/main-header.js"></script>
     <title>NurSprout</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         
         <div class="UserProfile">
             <img class="pfp" src="/assets/pfp2.jpg" id="profile-picture">
-            <h1 class="Name">Bob</h1>
+            <h1 class="Name" id="display-name"></h1>
         </div>
         
         <div class="buttons">
@@ -59,5 +59,7 @@
             </a>
         </div>
     </div>
+
+    <script src="/settings/settings.js"></script>
 </body>
 </html>
