adding quick log text

--- a/home.html
+++ b/home.html
@@ -28,17 +28,20 @@
       </div>
       
       <!-- food log -->
-      <div class="food-log-border">
-        <div class="food-log">
-          <input
-          type="text"
-          class="food-input"
-          id="food-input"
-          placeholder="Enter your food log here.. (ex: Banana 1tsp, Avocado 4tsp, ...)"
-          />
-          <button class="submit-log" id="submit-log">
-            <span class="material-symbols-outlined" id="send">send</span>
-          </button>
+      <div id="food-log-container">
+        <h3>Quick Log</h3>
+        <div class="food-log-border">
+          <div class="food-log">
+            <input
+            type="text"
+            class="food-input"
+            id="food-input"
+            placeholder="Enter your food log here.. (ex: Banana 1tsp, Avocado 4tsp, ...)"
+            />
+            <button class="submit-log" id="submit-log">
+              <span class="material-symbols-outlined" id="send">send</span>
+            </button>
+          </div>
         </div>
       </div>
       
