adding the dropdown for babies

--- a/home.html
+++ b/home.html
@@ -25,6 +25,13 @@
           <div class="sleep"><div class="sleep-filler"></div></div>
           <div class="nutrition"><div class="nutrition-filler"></div></div>
         </div>
+        <div class="baby-selector">
+          <select id="baby-dropdown">
+            <option value="angel">Little Angel</option>
+            <option value="sparkle">Little Nigger</option>
+            <option value="star">Supa Nigga</option>
+          </select>
+        </div>
       </div>
       
       <!-- food log -->
