adding the info div for quick log

--- a/home.html
+++ b/home.html
@@ -36,7 +36,10 @@
       
       <!-- food log -->
       <div id="food-log-container">
-        <h3>Quick Log</h3>
+        <div id="quick-log">
+          <h3>Quick Log</h3>
+          <div class="info-button"><span class="material-symbols-outlined" id="info-log">info</span></div>
+        </div>
         <div class="food-log-border">
           <div class="food-log">
             <input
