adding the info div for sleep title

--- a/home.html
+++ b/home.html
@@ -57,7 +57,10 @@
       
       <!-- adjust sleep time  -->
       <div class="row-flex" id="sleep-add">
-        <h3>Sleep</h3>
+        <div id="sleep-title">
+          <h3>Sleep</h3>
+          <div class="info-button"><span class="material-symbols-outlined" id="info-log">info</span></div>
+        </div>
         <button class="adjust-sleep-time" id="adjust-sleep-time">
           <span class="material-symbols-outlined" id="adjust">nights_stay</span>
           <p class="adjust-text">Adjust Sleep Time</p>
