fixing the naming of info log

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
       <div id="food-log-container">
         <div id="quick-log">
           <h3>Quick Log</h3>
-          <div class="info-button"><span class="material-symbols-outlined" id="info-log">info</span></div>
+          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
         </div>
         <div class="food-log-border">
           <div class="food-log">
@@ -59,7 +59,7 @@
       <div class="row-flex" id="sleep-add">
         <div id="sleep-title">
           <h3>Sleep</h3>
-          <div class="info-button"><span class="material-symbols-outlined" id="info-log">info</span></div>
+          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
         </div>
         <button class="adjust-sleep-time" id="adjust-sleep-time">
           <span class="material-symbols-outlined" id="adjust">nights_stay</span>
