adding the info div for nutrition title

--- a/home.html
+++ b/home.html
@@ -132,7 +132,10 @@
 
       <!-- Add nutrition  -->
       <div class="row-flex" id="nutrition-add">
-        <h3>Nutrition</h3>
+        <div id="nutrition-title">
+          <h3>Nutrition</h3>
+          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+        </div>
         <button class="add-nutrition" id="add-nutrition">
           <span class="material-symbols-outlined" id="nutrition">nutrition</span>
           <p class="add-nutrition-text">Add nutrition</p>
