--- a/home.html
+++ b/home.html
@@ -38,7 +38,10 @@
       <div id="food-log-container">
         <div id="quick-log">
           <h3>Quick Log</h3>
-          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+          <div class="tooltip-wrapper">
+            <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+            <div class="tooltip-text">This is a Quick Log to easily add your baby nutrition</div>
+          </div>
         </div>
         <div class="food-log-border">
           <div class="food-log">
@@ -59,7 +62,10 @@
       <div class="row-flex" id="sleep-add">
         <div id="sleep-title">
           <h3>Sleep</h3>
-          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+          <div class="tooltip-wrapper">
+            <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+            <div class="tooltip-text">This shows your baby's sleep information.</div>
+          </div>
         </div>
         <button class="adjust-sleep-time" id="adjust-sleep-time">
           <span class="material-symbols-outlined" id="adjust">nights_stay</span>
@@ -134,7 +140,10 @@
       <div class="row-flex" id="nutrition-add">
         <div id="nutrition-title">
           <h3>Nutrition</h3>
-          <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+          <div class="tooltip-wrapper">
+            <div class="info-button"><span class="material-symbols-outlined" id="info">info</span></div>
+            <div class="tooltip-text">This shows your baby's nutrition information.</div>
+          </div>
         </div>
         <button class="add-nutrition" id="add-nutrition">
           <span class="material-symbols-outlined" id="nutrition">nutrition</span>
