--- a/sleeptime.html
+++ b/sleeptime.html
@@ -12,8 +12,20 @@
 <body>
     <main-header></main-header>
     <div class="container">
-        
+        <div id="title">Adjust Your Baby Sleep time</div>
+        <div id="icons">
+            <span class="material-symbols-outlined">sunny</span>
+            <span class="material-symbols-outlined">nights_stay</span>
+            <span class="material-symbols-outlined">sunny</span>
+        </div>
+        <div id="slider"></div>
     </div>
+
+    <div class="buttons">
+        <button id="back-button"><span class="material-symbols-outlined">keyboard_backspace</span></button>
+        <button id="confirm-button">Confirm</button>
+    </div>
+
     <script src="sleeptime.js"></script>
 </body>
 </html>
