--- a/sleeptime.html
+++ b/sleeptime.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="buttons">
-            <button id="back-button"><span class="material-symbols-outlined">keyboard_backspace</span></button>
+            <button id="back-button"><span class="material-symbols-outlined" id="back">keyboard_backspace</span></button>
             <button id="confirm-button">Confirm</button>
         </div>
     </div>
