adding time details below the slider logo

--- a/sleeptime.html
+++ b/sleeptime.html
@@ -21,6 +21,11 @@
                 <span class="material-symbols-outlined" id="slider-icons">nights_stay</span>
                 <span class="material-symbols-outlined" id="slider-icons">sunny</span>
             </div>
+            <div id="time-details">
+                <p>5pm</p>
+                <p>1am</p>
+                <p>10am</p>
+            </div>
             <div id="slider"></div>
         </div>
 
