changing name by dropdown value (for multiple babies)

--- a/home.html
+++ b/home.html
@@ -27,9 +27,9 @@
         </div>
         <div class="baby-selector">
           <select id="baby-dropdown">
-            <option class="drop-option" value="angel">Little Angel</option>
-            <option class="drop-option" value="sparkle">Little Nigger</option>
-            <option class="drop-option" value="star">Supa Nigga</option>
+            <option class="drop-option">Little Angel</option>
+            <option class="drop-option">Little Nigga</option>
+            <option class="drop-option">Supa Nigga</option>
           </select>
         </div>
       </div>
