--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
         <div class="baby-selector">
           <select id="baby-dropdown">
             <option class="drop-option">Little Angel</option>
-            <option class="drop-option">Little Nigga</option>
-            <option class="drop-option">Supa Nigga</option>
+            <option class="drop-option">Madeline</option>
+            <option class="drop-option">Sparkle</option>
           </select>
         </div>
       </div>
