adding add baby button (not functional)

--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
             <option class="drop-option">Madeline</option>
             <option class="drop-option">Sparkle</option>
           </select>
+          <div id="add-baby"><span class="material-symbols-outlined" id="add">add</span></div>
         </div>
       </div>
       
