adding info hover state of adding a new baby

--- a/home.html
+++ b/home.html
@@ -31,7 +31,10 @@
             <option class="drop-option">Madeline</option>
             <option class="drop-option">Sparkle</option>
           </select>
-          <div id="add-baby"><span class="material-symbols-outlined" id="add">add</span></div>
+          <div class="tooltip-wrapper">
+            <div class="add-baby-info" id="add-baby"><span class="material-symbols-outlined" id="add">add</span></div>
+            <div class="tooltip-text" id="baby">Click to add new baby</div>
+          </div>
         </div>
       </div>
       
