shared-with-me update

--- a/collab/add_collab.html
+++ b/collab/add_collab.html
@@ -74,68 +74,68 @@
 
 
     <div class="collab-container" id="shared-with-me">
-        <div class="collab-account">
-            <div class="account">
-                <img src="/assets/customer1.jpg" alt="">
-                <span class="account-name">Insert Username Here</span>
-            </div>
-        </div>
-        <div class="collab-header">
-
-        </div>
-        <div class="collab-list">
-            <div class="collab-card">
-                <div class="collab-row1">
-                    <div class="baby-info">
-                        <img src="/assets/babyavatar.png" class="baby-icon">
-                        <div class="baby-stats">
-                            <span class="baby-name">Little Angel</span>
-                        </div>
-                    </div>
-                    <button class="more">
-                        <span class="material-symbols-outlined">more_vert</span>
-                    </button>
-                </div>
-                <div class="collab-row2">
-                    <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
-                    <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Sleep</p></button>
-                    <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+        <div class="main-col-container">
+            <div class="collab-header">
+                <span id="header-title">Track your collaborator's baby together</span>
+                <div class="col-header-row2">
+                    <input type="text" id="find-baby" placeholder="Search shared baby's profile">
+                    <button id="manage"><span class="quicksand-regular">Request Baby Profile</span></button>
                 </div>
             </div>
-            <div class="collab-card">
-                <div class="collab-row1">
-                    <div class="baby-info">
-                        <img src="/assets/babyavatar.png" class="baby-icon">
-                        <div class="baby-stats">
-                            <span class="baby-name">Little Angel</span>
+            <div class="collab-list">
+                <div class="collab-card">
+                    <div class="collab-row1">
+                        <div class="baby-info">
+                            <img src="/assets/babyavatar.png" class="baby-icon">
+                            <div class="baby-stats">
+                                <span class="baby-name">Little Angel</span>
+                            </div>
                         </div>
+                        <button class="more">
+                            <span class="material-symbols-outlined more-icon" >more_vert</span>
+                        </button>
                     </div>
-                    <button class="more">
-                        <span class="material-symbols-outlined">more_vert</span>
-                    </button>
+                    <div class="collab-row2">
+                        <a class="collab-button nutrition" href=""><span class="material-symbols-outlined">add</span><p>Add Nutrition</p></a>
+                        <a class="collab-button sleep" href=""><span class="material-symbols-outlined">add</span><p>Adjust Sleep</p></a>
+                        <a class="collab-button qlog" href=""><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></a>
+                    </div>
                 </div>
-                <div class="collab-row2">
-                    <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
-                    <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Sleep</p></button>
-                    <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
-                </div>
-            </div>
-            <div class="collab-card">
-                <div class="collab-row1">
-                    <div class="baby-info">
-                        <img src="/assets/babyavatar.png" class="baby-icon">
-                        <div class="baby-stats">
-                            <span class="baby-name">Little Angel</span>
+                <div class="collab-card">
+                    <div class="collab-row1">
+                        <div class="baby-info">
+                            <img src="/assets/babyavatar.png" class="baby-icon">
+                            <div class="baby-stats">
+                                <span class="baby-name">Little Angel</span>
+                            </div>
                         </div>
+                        <button class="more">
+                            <span class="material-symbols-outlined more-icon">more_vert</span>
+                        </button>
                     </div>
-                    <button class="more">
-                        <span class="material-symbols-outlined">more_vert</span>
-                    </button>
+                    <div class="collab-row2">
+                        <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
+                        <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Sleep</p></button>
+                        <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+                    </div>
                 </div>
-                <div class="collab-row2">
-                    <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
-                    <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Sleep</p></button>
-                    <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+                <div class="collab-card">
+                    <div class="collab-row1">
+                        <div class="baby-info">
+                            <img src="/assets/babyavatar.png" class="baby-icon">
+                            <div class="baby-stats">
+                                <span class="baby-name">Little Angel</span>
+                            </div>
+                        </div>
+                        <button class="more">
+                            <span class="material-symbols-outlined more-icon">more_vert</span>
+                        </button>
+                    </div>
+                    <div class="collab-row2">
+                        <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
+                        <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Adjust Sleep</p></button>
+                        <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+                    </div>
                 </div>
             </div>
         </div>
