Add a title to collaborators part

--- a/collab/collab.html
+++ b/collab/collab.html
@@ -21,6 +21,7 @@
     </section>
 
     <section id="collaborators" class="onScreen">
+        <span id="header-title">Manage who you're collabing with</span>
         <div id="find-and-add">
             <input type="text" placeholder="Find a collaborator" id="find-collab">
             <a id="add-button" class="quicksand-regular">Add people</a>
