hover state button collabpage

--- a/collab/collab.html
+++ b/collab/collab.html
@@ -56,7 +56,6 @@
                 <input type="checkbox">
                 <img src="/assets/customer3.jpg" alt="">
                 <p>Collaborator 3</p>
-
                 <div class="remove-collaborator">
                     <span class="material-symbols-outlined">delete</span>
                 </div>
@@ -80,7 +79,7 @@
                 <span id="header-title">Track your collaborator's baby together</span>
                 <div class="col-header-row2">
                     <input type="text" id="find-baby" placeholder="Search shared baby's profile">
-                    <button id="manage"><span class="quicksand-regular">Request Baby Profile</span></button>
+                    <button class="manage"><span class="quicksand-regular">Request Baby Profile</span></button>
                 </div>
             </div>
             <div class="collab-list">
