fix bukan button

--- a/collab/collab.html
+++ b/collab/collab.html
@@ -114,9 +114,9 @@
                         </button>
                     </div>
                     <div class="collab-row2">
-                        <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
-                        <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Sleep</p></button>
-                        <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+                        <a class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Add Nutrition</p></a>
+                        <a class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Adjust Sleep</p></a>
+                        <a class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></a>
                     </div>
                 </div>
                 <div class="collab-card">
@@ -132,16 +132,14 @@
                         </button>
                     </div>
                     <div class="collab-row2">
-                        <button class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Nutrition</p></button>
-                        <button class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Adjust Sleep</p></button>
-                        <button class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></button>
+                        <a class="collab-button nutrition"><span class="material-symbols-outlined">add</span><p>Add Nutrition</p></a>
+                        <a class="collab-button sleep"><span class="material-symbols-outlined">add</span><p>Adjust Sleep</p></a>
+                        <a class="collab-button qlog"><span class="material-symbols-outlined">edit_note</span><p>Quick Log</p></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
-
     <script src="/collab/collaborator-scripts.js"></script>
 </body>
 </html>
